--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "git-user",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://jabi-jaleel.github.io/Github-Find-User/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
